--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AllAddHabitsActivity"
-            android:label="HabitTracker"></activity>
+            android:name=".AllHabitsActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".AddHabitActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
